--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,36 @@
-Django==1.6.2
 Flask==0.10.1
+Flask-Limiter==0.7.8
 Flask-PyMongo==0.3.0
-Flask-S3==0.1.6
+Flask-WTF==0.11
 Jinja2==2.7.2
-MarkupSafe==0.18
-Twisted==13.2.0
-Werkzeug==0.9.4
+WTForms==2.0.2
+WTForms-Components==0.9.7
+Werkzeug==0.10.1
 altgraph==0.10.2
+backports.ssl-match-hostname==3.4.0.2
 bdist-mpkg==0.5.0
+blinker==1.3
 bonjour-py==0.3
 boto==2.27.0
+certifi==14.05.14
+decorator==3.4.0
+flake8==2.4.0
 httplib2==0.8
+infinity==1.3
+intervals==0.3.1
 itsdangerous==0.23
+limits==1.0.4
 macholib==1.5.1
 matplotlib==1.3.1
+mccabe==0.3
 modulegraph==0.10.4
+nose==1.3.4
 numpy==1.8.0rc1
 oauth2==1.5.211
+pep8==1.5.7
 py2app==0.7.3
 pyOpenSSL==0.13.1
+pyflakes==0.8.1
 pyimgur==0.5.2
 pymongo==2.7.2
 pyobjc-core==2.5.1
@@ -65,7 +77,9 @@ rq==0.4.6
 scipy==0.13.0b1
 six==1.4.1
 tinycss==0.3
+tornado==4.1
 twilio==3.6.15
+validators==0.7
 vboxapi==1.0
 wsgiref==0.1.2
 xattr==0.6.4
